<resources>
    <string name="app_name">App Launch</string>
    <string name="activity_Launch_title">Application Launchpad</string>
    <string name="button1_lable">Temperature Converter</string>
    <string name="button2_lable">Next App..</string>
    <string name="action_settings">Settings</string>
    <string name="activity_title">Temperature Converter</string>
    <color name="myColor">#F5F5F5</color>
    <string name="celsius">to Celsius</string>
    <string name="fahrenheit">to Fahrenheit</string>
    <string name="calc">Calculate</string>
    <string name="title_activity_temp_calc">Temperature Convertor</string>

    <string name="hello_world">Hello world!</string>
</resources>
