<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.aut.android.applaunch.TempCalc">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_lable"
        android:text="@string/activity_title"
        android:textSize="20dp"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_input"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:ems="10"
        android:padding="30dp"
        android:layout_below="@+id/text_lable"
        android:inputType="numberSigned|numberDecimal"
        />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/orientation"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/main_input">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radio1"
            android:text="@string/celsius"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radio2"
            android:checked="true"
            android:text="@string/fahrenheit"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calc"
            android:id="@+id/button"
            android:layout_below="@+id/orientation"
            android:layout_alignParentStart="true"
            android:onClick="onClick"/>
        </RadioGroup>
</RelativeLayout>
