<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:id="@+id/text_1"
        android:text="@string/activity_Launch_title"
        android:layout_centerHorizontal="true"
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button1"
        android:text="@string/button1_lable"
        android:layout_below="@+id/imageView"
        android:onClick="launchApp"/>

    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:id="@+id/imageView"
        android:layout_below="@+id/text_1"
        android:src="@drawable/android1"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button2_lable"
        android:id="@+id/button2"
        android:layout_below="@+id/button1"
        android:onClick="launchApp"/>

</RelativeLayout>
